# mwdb-core

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  AUTHORS  CONTRIBUTING.md  INSTALL.md  LICENSE  MANIFEST.in  README.md  alembic.ini  api.conf.example  api.py  app.py  app.wsgi  bootstrap-dev-env.sh  build-image.sh  compose.sh  config.dist.py  config.docker.py  details  dev-compose.sh  dev-requirements.txt  docker-compose-dev-karton.yml  docker-compose-dev-remote.yml  docker-compose-dev.yml  docker-compose-e2e-karton.yml  docker-compose-e2e.yml  docker-compose-frontend-tests.yml  docker-compose-oidc-dev.yml  docker-compose-unit-test.yml  docker-compose.yml  gen_vars.sh  makespec.py  malwarecage.example.ini  plugin_engine.py  prestart.sh  procedures.sql  (+7 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  release.yml
alembic/: env.py
compose/: compose.web-unit-tests.yml  compose.with-dev.yml  compose.with-e2e.yml  compose.with-karton.yml  compose.with-oidc.yml  compose.with-s3.yml
core/: app.py  capabilities.py  config.py  log.py  mail.py  schema.py  service.py  util.py
core/humanhash/: humanhash.py
core/search/: __init__.py  exceptions.py  fields.py  mappings.py  search.py  tree.py
core/typedconfig/: __init__.py  provider.py
db/: __init__.py  base.py  decorators.py  query.py
db/config/: __init__.py  models.py
db/email/: __init__.py  models.py
db/malware/: __init__.py  models.py  query.py
db/network/: __init__.py  models.py
db/object/: __init__.py  models.py  query.py
deploy/: deploy.json
deploy/docker/: Dockerfile  Dockerfile-malwarefront  Dockerfile-malwarefront-dev  Dockerfile-oidc-server  Dockerfile-web  Dockerfile-web-dev  Dockerfile-web-unit-test
deploy/k8s/: malwarefront.yml  mwdb-docs.yml  mwdb.yml  postgres.yml  redis.yml
deploy/k8s-st/: malwarefront.yml  mwdb-docs.yml  mwdb.yml  postgres.yml  redis.yml
dev/: bump_version.json  bump_version.py  karton.ini  mwdb.ini
dev/compose/: base.yml  e2e.yml  hot-reload.yml  karton.yml  minio-base.yml  minio.yml  oidc.yml
dev/oidc/: README.md  init.py  realm-export.json
docker/: gunicorn.conf.py  malwarecage.ini  mwdb.ini  nginx.conf.template  start.sh  uwsgi.ini
docker/OIDC/: README.md  requirements.txt
docs/: conf.py  developer-guide.rst  developer_guide.rst  extra-features.rst  index.rst  integration-guide.rst  integration_guide.rst  karton-guide.rst  oauth-guide.rst  prometheus-guide.rst  rate-limits.rst  remotes-guide.rst  requirements.txt  rich-attributes-guide.rst  setup-and-configuration.rst  setup_and_configuration.rst  whats-changed.rst
docs/guide/: 01_introduction.rst  02_samples.rst  03_configs.rst  04_blobs.rst  05_tags.rst  06_attributes.rst  07_interactive_search.rst  08_advanced_search.rst  09_mwdblib.rst  10_sharing.rst  11_extras.rst  index.rst
docs/user-guide/: 1-Introduction-to-MWDB.rst  10-Extra-features.rst  2-Storing-malware-samples.rst  3-Storing-malware-configurations.rst  4-Storing-blobs.rst  5-Tagging-objects.rst  6-Object-attributes.rst  7-Lucene-search.rst  8-REST-and-mwdblib.rst  9-Sharing-objects.rst  index.rst
libs/: analysis.py  extractor.py  objects.py  repository.py  web.py
mail_templates/: README.md  pending.txt  register.txt
malwarecage/: app.py  cli.py  plugin_engine.py  version.py
malwarecage/cli/: __init__.py  base.py  cli.py  configuration.py  database.py  web.py
malwarecage/core/: apispec_utils.py  app.py  capabilities.py  config.py  log.py  mail.py  paths.py  plugins.py  rate_limit.py  service.py  static.py
malwarecage/model/: __init__.py  api_key.py  comment.py  config.py  file.py  group.py  metakey.py  object.py  quick_query.py  tag.py  user.py
malwarecage/resources/: __init__.py  api_key.py  auth.py  blob.py  comment.py  config.py  download.py  file.py  group.py  metakey.py  object.py  quick_query.py  relations.py  search.py  server.py  share.py  tag.py  user.py
malwarecage/schema/: api_key.py  auth.py  blob.py  comment.py  download.py  file.py  group.py  metakey.py  object.py  quick_query.py  search.py  server.py
malwarecage/templates/: malwarecage.ini.tmpl
malwarecage/web/: config-overrides.js  package-lock.json  package.json
malwarefront/: .dockerignore  config-overrides.js  default.conf.template  package-lock.json  package.json  start.sh
malwarefront/extensions/: discover.js  extensions.js
malwarefront/public/: index.html
malwarefront/src/: App.js  index.js  store.js
migrations/versions/: 025b1d5b7bba_.py  0c0231128363_.py  (+30 more)
model/: __init__.py  api_key.py  blob.py  comment.py  config.py  file.py  group.py  metakey.py  object.py  query.py  quick_query.py  tag.py  user.py  utils.py
mwdb/: app.py  paths.py  version.py
plugins/: README.md  __init__.py
resources/: __init__.py  api_key.py  auth.py  blob.py  comment.py  config.py  download.py  file.py  group.py  metakey.py  object.py  query.py  quick_query.py  relations.py  search.py  server.py  share.py  tag.py  user.py
schema/: api_key.py  auth.py  blob.py  config.py  file.py  group.py  metakey.py  object.py  query.py  quick_query.py  relations.py  share.py  tag.py  user.py
tests/: relations.py  test_api.py  test_attributes.py  test_auth.py  test_multigroup_groups.py  test_multigroup_submit.py  test_permissions.py  test_search.py  test_sharing.py  utils.py
tests-frontend/: Dockerfile  README.md  login.js  package.json
urls/: config.py  file.py  malware.py  rest.py  search.py  user.py
(+1071 files in other folders)
