[project]
name = "mwdb-core"
version = "2.16.1"
description = "MWDB Core malware database"
requires-python = ">=3.10"
dependencies = [
    "alembic==1.14.0",
    "apispec[marshmallow,yaml]==6.4.0",
    "authlib==1.6.5",
    "bcrypt==5.0.0",
    "boto3==1.24.38",
    "click==8.1.3",
    "click-default-group==1.2.2",
    "flask==2.3.3",
    "flask-migrate==4.0.7",
    "flask-sqlalchemy==3.0.5",
    "gunicorn==23.0.0",
    "karton-core==5.4.0",
    "limits==3.9.0",
    "luqum==0.13.0",
    "marshmallow==3.20.2",
    "prometheus-client==0.21.1",
    "psycopg2-binary==2.9.10",
    "pycryptodomex==3.23.0",
    "pyjwt==2.4.0",
    "python-dateutil==2.8.2",
    "python-json-logger==2.0.2",
    "python-magic==0.4.18",
    "pyzipper==0.3.5",
    "redis==4.5.4",
    "requests==2.32.4",
    "sqlalchemy==1.4.54",
    "ssdeep==3.4",
    "typed-config==1.1.0",
    "werkzeug==3.1.4",
]

[dependency-groups]
test = [
    "pyJWT==2.4.0",
    "pytest",
    "pytest-rerunfailures",
    "requests",
    "python-baseconv",
]
dev = [
    "black",
    "isort",
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.lint-python]
lint-version = "2"
source = "mwdb/"
use-mypy = false

[tool.black]
exclude = '''
/(
mwdb/web/.+ |
mwdb/model/migrations/.+
/)
'''
